Fix readable number and bar width

--- a/packages/components/src/components/as-stacked-bar-widget/as-stacked-bar-widget.scss
+++ b/packages/components/src/components/as-stacked-bar-widget/as-stacked-bar-widget.scss
@@ -24,7 +24,7 @@ as-stacked-bar-widget {
     border: 1px solid tomato;
 
     .plot {
-      transform: translate(30px, 0) scaleY(0.985);
+      transform: translate(25px, 0) scaleY(0.985);
       transform-origin: center;
     }
   }
