--- a/packages/components/src/components/common/yAxis/as-y-axis.scss
+++ b/packages/components/src/components/common/yAxis/as-y-axis.scss
@@ -1,4 +1,4 @@
-.x-axis {
+.y-axis {
   transform: translate(25px, 1px);
 
   .tick {
